# nanugo

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
src/nanugo/: __init__.py  cli.py  log.py  nanugo.py
src/nanugo/tools/: __init__.py  images.py  utils.py  validations.py
